fix: delete security, dto records, fix tests, fix naming in mappers